--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,12 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
 		</dependency>
@@ -66,6 +72,7 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 	
+		
 	</dependencies>
 
 	<build>
