--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,18 @@ server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
 spring.mvc.locale=ko_KR
+
+# PostgreSQL JDBC
+spring.datasource.url=jdbc:postgresql://localhost:5432/user_management_db
+spring.datasource.username=lst
+spring.datasource.password=1111
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA / Hibernate 설정
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# 타임존 설정 (선택)
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
